# SDK-legacy

./: .gitignore  README.md
APKs/: BluetoothSetting.apk  README.md
Binary/: README.md
Demos/: README.html  README.md
Driver/: README.md
Native Android/: README.md
Native C++/: CMakeLists.txt  README.md  X-Hawk.h  test.cpp
Native C++/x64/Debug/: X-Hawk.lib
Native C++/x64/Release/: X-Hawk.lib
Native C++/x86/Debug/: X-Hawk.lib
Native C++/x86/Release/: X-Hawk.lib
Tools/: README.html  README.md
Tools/Mobile/: BTconnect.apk
Unity/: README.md
